--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 				width:200px;
 				height:200px;
 				background-color:red;
+				display:none;
 			}
 		</style>
 	</head>
@@ -16,14 +17,23 @@
 		<div id="shape"></div>
 		<script type="text/javascript">
 			var start = new Date().getTime();
-			
+			function makeShapeAppear(){
+				document.getElementById("shape").style.display = "block";
+				start = new Date().getTime();
+			}
+			function reAppear(){
+				setTimeout(makeShapeAppear,Math.random() * 2000);
+			}
+			reAppear();
 			document.getElementById("shape").onclick=function(){
 			document.getElementById("shape").style.display = "none";
 			var end = new Date().getTime();
 			var timeTaken = (end- start) /1000; /*divided by 1000 to get in seconds*/
 			document.getElementById('timeTaken').innerHTML = timeTaken+"s";
 				
+			reAppear();
 			}
+			
 		</script>
 	</body>
 </html>
