Randomly generate top and left positions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 				height:200px;
 				background-color:red;
 				display:none;
+				position: relative; /* change the position of DIV */
 			}
 		</style>
 	</head>
@@ -18,6 +19,10 @@
 		<script type="text/javascript">
 			var start = new Date().getTime();
 			function makeShapeAppear(){
+				var top = Math.random() * 200; /*generate random numbers*/
+				var left = Math.random() * 200; /*generate random numbers*/
+				document.getElementById('shape').style.top = top+"px";/*Use top variable to define top pixels*/
+				document.getElementById('shape').style.left = left+"px";/*Use top variable to define left pixels*/
 				document.getElementById("shape").style.display = "block";
 				start = new Date().getTime();
 			}
