--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 		<div id="shape"></div>
 		<script type="text/javascript">
 			var start = new Date().getTime();
+			function getRandomColor() {
+				  var letters = '0123456789ABCDEF';
+				  var color = '#';
+				  for (var i = 0; i < 6; i++) {
+					color += letters[Math.floor(Math.random() * 16)];
+				  }
+				  return color;
+				}
 			function makeShapeAppear(){
 				var top = Math.random() * 200; /*generate random numbers*/
 				var left = Math.random() * 200; /*generate random numbers*/
@@ -26,6 +34,7 @@
 				document.getElementById('shape').style.left = left+"px";/*Use top variable to define left pixels*/
 				document.getElementById('shape').style.width = width+"px";/*Use top variable to define left pixels*/
 				document.getElementById('shape').style.height = width+"px";/*Use top variable to define left pixels*/
+				document.getElementById('shape').style.backgroundColor = getRandomColor();
 				document.getElementById("shape").style.display = "block";
 				start = new Date().getTime();
 			}
