--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
 				var top = Math.random() * 200; /*generate random numbers*/
 				var left = Math.random() * 200; /*generate random numbers*/
 				var width = Math.random() * 400; /*generate random numbers*/
+				
 				document.getElementById('shape').style.top = top+"px";/*Use top variable to define top pixels*/
 				document.getElementById('shape').style.left = left+"px";/*Use top variable to define left pixels*/
 				document.getElementById('shape').style.width = width+"px";/*Use top variable to define left pixels*/
 				document.getElementById('shape').style.height = width+"px";/*Use top variable to define left pixels*/
 				document.getElementById('shape').style.backgroundColor = getRandomColor();
 				document.getElementById("shape").style.display = "block";
+				if (Math.random() > 0.5 ){
+					document.getElementById('shape').style.borderRadius = "50%";
+				}else
+				{
+					document.getElementById('shape').style.borderRadius = "0";
+				}
 				start = new Date().getTime();
 			}
 			function reAppear(){
