--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			function makeShapeAppear(){
 				var top = Math.random() * 200; /*generate random numbers*/
 				var left = Math.random() * 200; /*generate random numbers*/
-				var width = Math.random() * 400; /*generate random numbers*/
+				var width = (Math.random() * 400) +100; /*generate random numbers*/
 				
 				document.getElementById('shape').style.top = top+"px";/*Use top variable to define top pixels*/
 				document.getElementById('shape').style.left = left+"px";/*Use top variable to define left pixels*/
