CSS copied externally

--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <html>
 	<head>
 		<title>JavaScript</title>
-		<style type="text/css">
-			#shape{
-				width:200px;
-				height:200px;
-				background-color:red;
-				display:none;
-				position: relative; /* change the position of DIV */
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Test Your Reactions!</h1>
